feat: Fill in images for other seasons

--- a/frontpage.html
+++ b/frontpage.html
@@ -14,11 +14,17 @@
     <h1>This is a world I like to see</h1>
     <div class="row">
         <div class="col-3">Aki
-            <img class="img-fluid" src="images/915f639f8022c433d27703a22984c997f267b4b765bd7602435f3f99ec146f2c.jpg">
+            <img class="img-fluid" src="images/aki_01.jpg">
         </div>
-        <div class="col-3">Fuyu</div>
-        <div class="col-3">Haru</div>
-        <div class="col-3">Natsu</div>
+        <div class="col-3">Fuyu
+            <img class="img-fluid" src="images/fuyu_01.jpg">
+        </div>
+        <div class="col-3">Haru
+            <img class="img-fluid" src="images/haru_01.jpg">
+        </div>
+        <div class="col-3">Natsu
+            <img class="img-fluid" src="images/natsu_01.jpg">
+        </div>
     </div>
     <div class="row">
         <div class="col-3">shuffle
